# todo-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: quickstart.yml
backend/: Cargo.toml  notes.md
backend/model/: Cargo.toml
backend/model/src/: data_holder_dummy.rs  lib.rs  model_handler.rs  todo_dao.rs  todo_dto.rs  todo_persistency_dummy.rs  todo_persistency_json.rs
backend/model/src/tests/: json_todo_persistency.rs  mod.rs  persistency_dummy.rs  todo_dao.rs  todo_dto.rs
backend/src/: lib.rs  model_handler.rs  note_dao.rs  note_dto.rs  note_holder.rs  note_persistency_json.rs  paths.rs  subtask.rs  todo_dao.rs  todo_dto.rs  todo_filter.rs  todo_persistency_dummy.rs  todo_persistency_json.rs  todo_persistency_ws.rs
backend/src/tests/: json_todo_persistency.rs  mod.rs  note_dao.rs  note_experiments.rs  todo_dao.rs  todo_dto.rs  todo_filter.rs  todo_helpers.rs
backend/src/tests/files/: note_test_data.json  todo_test_data.json
backend/src/types/enums/: mod.rs
backend/src/types/traits/: dao.rs  mod.rs  persistency.rs
backend/types/: Cargo.toml
backend/types/src/enums/: log_level.rs  todo_type.rs
backend/types/src/traits/: dao.rs  mod.rs  persistency.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
src/backed/: todo_dto.rs
src/ui/: core.rs
ui/: Cargo.toml
ui-egui/: Cargo.toml
ui-egui/src/: bootstrap.rs  constants.rs  main.rs  pipeline.rs  todo_handler.rs  todo_pipeline.rs  todo_ui.rs
ui-egui/src/todo/: todo_cache.rs  todo_handler.rs  todo_pipeline.rs  todo_ui.rs
ui/src/: bootstrap.rs  constants.rs  main.rs
ui/src/enums/: notification.rs
ui/src/module/: bootstrap.rs  mod.rs  wrappers.rs
ui/src/todo/: mod.rs  todo_cache.rs  todo_handler.rs  todo_images.rs  todo_pipeline.rs  todo_ui.rs
ui/ui/: actionbuttons.slint  appwindow.slint  searchbar.slint  viewfileitem.slint  viewtodoitem.slint
