[package]
name = "backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

rayon = "1.10.0"
async-trait = "0.1.80"
tokio = { version = "1.37.0", features = ["full"] }

chrono = { version = "0.4.38", features = ["serde"] }

test-case = "3.3.1"