[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.0"
tungstenite = "0.21.0"
env_logger = { version = "0.11.1", default-features = false, features = [
    "auto-color",
    "humantime",
] }