[package]
name = "ui-egui"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.113"
tokio = { version = "1.37.0", features = ["full"] }
rayon = "1.10.0"

eframe = { version = "0.27.2", features = ["default"] }

egui_extras = { version = "0.27.2", features = ["default", "image"] }
egui-notify = "0.14.0"

env_logger = { version = "0.11.1", default-features = false, features = [
    "auto-color",
    "humantime",
] }

itertools = "0.12"
tracing-subscriber = "0.3"
chrono = { version = "0.4.38", features = ["serde"] }

backend = { path = "../backend" }
