[package]
name = "todo-rs"
version = "0.1.0"
authors = ["Michal Žamboch <zamboch.michal@seznam.cz>"]
edition = "2021"
build = "build.rs"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5.1"

rayon = "1.10.0"
fast-str = { version = "1.0.0", features = ["serde"] }

backend = { path = "../backend" }

[build-dependencies]
slint-build = "1.5.1"
