[package]
name = "todo-rs"
version = "0.1.0"
authors = ["Michal Žamboch <zamboch.michal@seznam.cz>"]
edition = "2021"
build = "build.rs"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5.1"

rayon = "1.10.0"
fast-str = { version = "1.0.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

backend = { path = "../backend" }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[build-dependencies]
slint-build = "1.5.1"
